test/TestPhases/importchecking/valid/calloneactivity.blc
import o "../imports/oneactivity" 

@[EntryPoint]
activity Main () ()
    run o.AnAct()
end