test/TestPhases/importchecking/invalid/importUncompilable.blc
import uc "../imports/uncompilable"

@[EntryPoint]
activity Main ()
    await true
end